--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body>
+	<body class="bg-midiYellow">
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
